[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation"
version = "0.1.0"
authors = [
    {name = "gomeshun", email = "your.email@example.com"},
]
description = "A Python enum for astronomical constellations with standard abbreviations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["astronomy", "constellation", "enum", "abbreviation"]

[project.urls]
Homepage = "https://github.com/gomeshun/constellation"
"Bug Reports" = "https://github.com/gomeshun/constellation/issues"
"Source" = "https://github.com/gomeshun/constellation"

[tool.setuptools.packages.find]
where = ["."]
include = ["constellation*"]
exclude = ["tests*"]
